<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.creator.GeolocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textEventCreatorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_event_location"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textLocationSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <EditText
            android:id="@+id/editLocationQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/buttonUseCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationMatchesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            tools:itemCount="5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textLocationResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="14sp"
            android:textColor="@color/col_on_secondary"/>

        <TextView
            android:id="@+id/textSelectedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/col_on_secondary"/>

        <TextView
            android:id="@+id/textSelectedLocationFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:ignore="SmallSp"
            android:textColor="@color/col_on_secondary"/>

        <ProgressBar
            android:id="@+id/progressBarEventCreatorLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonCancelGeolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/buttonSetGeolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_geolocation"
            app:cornerRadius="50dp" />
    </LinearLayout>
</FrameLayout>