<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/eventCreatorMainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textEventCreatorTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/create_an_event_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/col_on_primary"
            app:cardBackgroundColor="@color/col_on_primary"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/col_on_primary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                tools:ignore="UselessParent">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/editEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/event_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <CheckBox
                    android:id="@+id/checkGeolocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_geolocation" />

                <EditText
                    android:id="@+id/editEventLocationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/location_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/buttonGotoGeolocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_geolocation"
                    android:visibility="gone"
                    app:cornerRadius="50dp"/>

                <include
                    android:id="@+id/startDateTime"
                    layout="@layout/date_time_buttons" />


                <include
                    android:id="@+id/endDateTime"
                    layout="@layout/date_time_buttons" />

                <CheckBox
                    android:id="@+id/checkEventRecurrence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_event" />

                <LinearLayout
                    android:id="@+id/recurrencePeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/textRecurrencePeriod"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/repeat_every" />

                    <EditText
                        android:id="@+id/editRecurrenceAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:textAlignment="textEnd" />

                    <Spinner
                        android:id="@+id/spinnerRecurrencePeriodType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <include
                    android:id="@+id/recurrenceUntil"
                    layout="@layout/date_time_buttons"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/checkArgsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/traffic_red"
                    android:textAlignment="center"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonEventAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event_button_text"
            app:cornerRadius="50dp" />

        <ProgressBar
            android:id="@+id/progressBarEventCreatorLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>
</FrameLayout>